# chess

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/chess/: bishop.hpp  board_slot.hpp  chess_move.hpp  chess_piece.hpp  chess_sound.hpp  chess_user.hpp  chessboard.hpp  king.hpp  knight.hpp  pawn.hpp  piece_data.hpp  queen.hpp  rook.hpp
include/chess/utils/: audio_player.hpp  helpers.hpp  image_loader.hpp  resource_loader.hpp  settings.hpp
src/: bishop.cpp  board_slot.cpp  chess_move.cpp  chess_piece.cpp  chess_user.cpp  chessboard.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  queen.cpp  rook.cpp
src/utils/: audio_player.cpp  helpers.cpp  image_loader.cpp  resource_loader.cpp  settings.cpp
tests/: CMakeLists.txt  dummy_test.cpp  test_launcher.cpp
